width 90% instead of fixed - fixes 'too narrow' issue on mobile/tablet

--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -48,7 +48,7 @@
 
 @media only screen and (min-width: 480px) and (max-width: 767px){
     .container{
-        width: 460px;
+        width: 90%;
     }
     [class*="col-"]{
         width: 100%;
@@ -102,7 +102,7 @@
 
 @media only screen and (min-width: 320px) and (max-width: 479px){
     .container{
-        width: 270px;
+        width: 90%;
     }
     [class*="col-"]{
         width: 100%;
